<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/library_options">

        <Preference
                android:key="@string/font_size_key"
                android:summary="@string/medium_font_size"
                android:title="@string/font_size_key" />

        <SwitchPreferenceCompat
                android:defaultValue="true"
                android:key="@string/translation_with_aya"
                android:title="@string/translation_with_aya" />

        <Preference
                android:dependency="@string/translation_with_aya"
                android:key="@string/set_quran_edition"
                android:summary="@string/quran_translation_summary"
                android:title="@string/set_quran_edition" />

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/arabic_numbers"
                android:title="@string/arabic_numbers" />

    </PreferenceCategory>



</PreferenceScreen>